--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background: #ecede1dc !important;
 }
 
 a {
@@ -20,7 +21,7 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
+    color: #d3e3e6;
     background: black;
   }
 }
